Css fixes (wrapping of team members)

--- a/portlets/proposals-portlet/src/main/webapp/css/proposals.css
+++ b/portlets/proposals-portlet/src/main/webapp/css/proposals.css
@@ -1410,3 +1410,16 @@ table.ribbonsAndPlanName td {
 table.jqplot-table-legend {
 	margin-top: 320px;
 }
+.contestTeamRole {
+	white-space: normal;
+	min-width: 435px;
+	max-width: 755px;
+}
+
+.contestTeamRole .contestTeamRoleName {
+	vertical-align: bottom;
+}
+.contestTeamRole .contestTeamMember {
+	white-space: nowrap;
+	float: left;
+}
